--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -34,6 +34,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    testImplementation rootProject.ext.dependencies["junit"]
+    androidTestImplementation rootProject.ext.dependencies["runner"]
+    androidTestImplementation rootProject.ext.dependencies["espresso-core"]
+
     // support
     api(rootProject.ext.dependencies["appcompat-v7"]) {
         exclude module: 'support-annotations'
