--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -53,4 +53,5 @@ dependencies {
         exclude module: 'support-compat'
     }
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
+    api rootProject.ext.dependencies["recyclerview-v7"]
 }
