--- a/config.gradle
+++ b/config.gradle
@@ -33,6 +33,10 @@ ext{
             "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
             "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
 
+            // tools
+            "eventbus"                 : "org.greenrobot:eventbus:3.1.1",
+            "klog"                     : "com.github.zhaokaiqiang.klog:library:1.6.0",
+
             //test
             "junit"                    : "junit:junit:4.13-beta-2",
             "runner"                   : "com.android.support.test:runner:1.0.2",
