--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,11 @@ ext{
     version = [
             androidSupportSdkVersion: "28.0.0",
             espressoSdkVersion      : "3.0.2",
-            butterknifeSdkVersion   : "10.1.0"
+            butterknifeSdkVersion   : "10.1.0",
+            dagger2SdkVersion       : "2.22.1",
+            okhttp3Version          : "3.12.2",
+            retrofitSdkVersion      : "2.5.0",
+            rxlifecycle2SdkVersion  : "3.0.0"
     ]
 
     dependencies = [
@@ -26,8 +30,22 @@ ext{
             "support-vector-drawable"  : "com.android.support:support-vector-drawable:${version["androidSupportSdkVersion"]}",
             "constraint-layout"        : "com.android.support.constraint:constraint-layout:2.0.0-alpha4",
 
+            // net
+            "okhttp3"                  : "com.squareup.okhttp3:okhttp:${version["okhttp3Version"]}",
+            "okhttp3-logging-interceptor": "com.squareup.okhttp3:logging-interceptor:${version["okhttp3Version"]}",
+            "okhttp-urlconnection"     : "com.squareup.okhttp:okhttp-urlconnection:2.7.5",
+            "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
+            "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
+            "retrofit2-converter-scalars": "com.squareup.retrofit2:${version["retrofitSdkVersion"]}",
+
             // rx2
             "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.8",
+            "rxandroid2"                : "io.reactivex.rxjava2:rxandroid:2.1.1",
+            "rxlifecycle2"              : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-android"      : "com.trello.rxlifecycle2:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-components"   : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
+            "rxpermissions2"            : "com.github.tbruyelle:rxpermissions:0.10.2",
 
             // view
             "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
@@ -36,6 +54,12 @@ ext{
             // tools
             "eventbus"                 : "org.greenrobot:eventbus:3.1.1",
             "klog"                     : "com.github.zhaokaiqiang.klog:library:1.6.0",
+            "gson"                     : "com.google.code.gson:gson:2.8.5",
+            "dagger2"                  : "com.google.dagger:dagger:${version["dagger2SdkVersion"]}",
+            "dagger2-android"          : "com.google.dagger:dagger-android:${version["dagger2SdkVersion"]}",
+            "dagger2-android-support"  : "com.google.dagger:dagger-android-support:${version["dagger2SdkVersion"]}",
+            "dagger2-compiler"         : "com.google.dagger:dagger-compiler:${version["dagger2SdkVersion"]}",
+            "dagger2-android-processor": "com.google.dagger:dagger-android-processor:${version["dagger2SdkVersion"]}",
 
             //test
             "junit"                    : "junit:junit:4.13-beta-2",
