--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -44,6 +44,13 @@ dependencies {
     }
     api rootProject.ext.dependencies["constraint-layout"]
 
+    // net
+    api rootProject.ext.dependencies["okhttp3"]
+    api rootProject.ext.dependencies["okhttp3-logging-interceptor"]
+    api rootProject.ext.dependencies["retrofit"]
+    api rootProject.ext.dependencies["retrofit-converter-gson"]
+    api rootProject.ext.dependencies["retrofit-adapter-rxjava2"]
+
     // rx2
     api rootProject.ext.dependencies["rxjava2"]
 
@@ -58,4 +65,7 @@ dependencies {
     // tools
     api rootProject.ext.dependencies["eventbus"]
     api rootProject.ext.dependencies["klog"]
+    api rootProject.ext.dependencies["gson"]
+    api rootProject.ext.dependencies["dagger2"]
+    annotationProcessor rootProject.ext.dependencies["dagger2-compiler"]
 }
