集成GreenDao，并加入测试数据表，封装数据库基本操作方法

--- a/config.gradle
+++ b/config.gradle
@@ -16,7 +16,8 @@ ext{
             dagger2SdkVersion       : "2.22.1",
             okhttp3Version          : "3.12.2",
             retrofitSdkVersion      : "2.5.0",
-            rxlifecycle2SdkVersion  : "3.0.0"
+            rxlifecycle2SdkVersion  : "3.0.0",
+            greendaoSdkVersion      : "3.2.2"
     ]
 
     dependencies = [
@@ -54,6 +55,10 @@ ext{
             // view
             "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
             "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
+
+            // db
+            "greendao-generator"       : "org.greenrobot:greendao-generator:${version["greendaoSdkVersion"]}",
+            "greendao"                 : "org.greenrobot:greendao:${version["greendaoSdkVersion"]}",
 
             // tools
             "eventbus"                 : "org.greenrobot:eventbus:3.1.1",
