--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath "com.alibaba:arouter-register:1.0.2"
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
