--- a/config.gradle
+++ b/config.gradle
@@ -30,6 +30,7 @@ ext{
             "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
             "support-vector-drawable"  : "com.android.support:support-vector-drawable:${version["androidSupportSdkVersion"]}",
             "constraint-layout"        : "com.android.support.constraint:constraint-layout:2.0.0-alpha4",
+            "multidex"                 : "com.android.support:multidex:1.0.3",
 
             //Atrouter
             "arouter-api"               : "com.alibaba:arouter-api:1.4.1",
