--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath "com.alibaba:arouter-register:1.0.2"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'cn.leo.plugin:magic-plugin:1.0.0'
     }
 }
 
