--- a/config.gradle
+++ b/config.gradle
@@ -57,6 +57,7 @@ ext{
             "butterknife"              : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
             "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
             "base-recyclerview-adapter-helper"     : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30",
+            "singleclick"              : "com.github.jarryleo:SingleClick:v1.8.3",
 
             // db
             "greendao-generator"       : "org.greenrobot:greendao-generator:${version["greendaoSdkVersion"]}",
