--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.leo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:icon">
-        <activity android:name=".MainActivity">
+        android:theme="@style/common_AppTheme"
+        tools:replace="android:icon"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".LoadingAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
