--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -51,9 +51,8 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies["runner"]
     androidTestImplementation rootProject.ext.dependencies["espresso-core"]
 
-    // support
-    api(rootProject.ext.dependencies["appcompat-v7"]) {
-        exclude module: 'support-annotations'
+    api(rootProject.ext.dependencies["appcompat"]) {
+        exclude module: 'annotations'
     }
     api rootProject.ext.dependencies["constraint-layout"]
 
@@ -81,7 +80,7 @@ dependencies {
         exclude module: 'support-compat'
     }
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
-    api rootProject.ext.dependencies["recyclerview-v7"]
+    api rootProject.ext.dependencies["recyclerview"]
     api rootProject.ext.dependencies["base-recyclerview-adapter-helper"]
 
     // tools
